# strands-agent-multi-agent-streamlit-chat

./: .env.example  CLAUDE.md  DEVELOPMENT_GUIDE.md  LICENSE  QUICKSTART.md  README.md  app.py  pyproject.toml  quickstart.py  test_strands.py  test_trip_planning.py
examples/: advanced_usage.py  basic_usage.py  test_agents.py
src/multi_agent_system/: __init__.py  orchestrator.py
src/multi_agent_system/agents/: __init__.py  base_agent.py  product_recommendation_assistant.py  research_assistant.py  trip_planning_assistant.py
src/multi_agent_system/tools/: __init__.py  agent_tools.py
src/multi_agent_system/utils/: config.py
tests/: test_agents.py
